--- a/contrailconfig.yaml
+++ b/contrailconfig.yaml
@@ -8,25 +8,10 @@ metadata:
 spec:
   ports:
   - port: 8082
-    targetPort: 8082
-    protocol: TCP
     name: api
-  type: LoadBalancer
+  clusterIP: None
   selector:
     app: contrailconfig
----
-apiVersion: v1
-kind: ConfigMap
-metadata:
-  name: contrailconfig-cm
-data:
-  RABBITMQ_NODE_PORT: "5672"
-  CONFIGDB_PORT: "9160"
-  CONFIG_NODES: "contrailconfig-0.contrailconfig-svc.default.svc.cluster.local,contrailconfig-1.contrailconfig-svc.default.svc.cluster.local,contrailconfig-2.contrailconfig-svc.default.svc.cluster.local"
-  CONFIGDB_NODES: "cassandra-0.cassandra.default.svc.cluster.local,cassandra-1.cassandra.default.svc.cluster.local,cassandra-2.cassandra.default.svc.cluster.local"
-  ZOOKEEPER_NODES: "zk-0.zk-svc.default.svc.cluster.local,zk-1.zk-svc.default.svc.cluster.local,zk-2.zk-svc.default.svc.cluster.local"
-  RABBITMQ_NODES: "rabbitmq-0.rabbitmq.default.svc.cluster.local,rabbitmq-1.rabbitmq.default.svc.cluster.local,rabbitmq-2.rabbitmq.default.svc.cluster.local"
-  CLOUD_ORCHESTRATOR: kubernetes
 ---
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
@@ -61,9 +46,23 @@ spec:
                     - contrailconfig
               topologyKey: "kubernetes.io/hostname"
       containers:
+      - name: nodemgr
+        imagePullPolicy: Always
+        image: docker.io/michaelhenkel/contrail-nodemgr:queens-master-118-centos
+        command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: "500m"
+        envFrom:
+        - configMapRef:
+            name: contrail-cm
+        env:
+        - name: NODE_TYPE
+          value: "config"
       - name: api
         imagePullPolicy: Always
-        image: docker.io/opencontrailnightly/contrail-controller-config-api:latest
+        image: docker.io/michaelhenkel/contrail-controller-config-api:queens-master-118-centos
         resources:
           requests:
             memory: "2Gi"
@@ -71,149 +70,36 @@ spec:
         ports:
         - containerPort: 8082
           name: client
-        env:
-        - name : RABBITMQ_NODE_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODE_PORT
-        - name : CONFIG_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIG_NODES
-        - name : CONFIGDB_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_NODES
-        - name : ZOOKEEPER_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: ZOOKEEPER_NODES
-        - name : RABBITMQ_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODES
-        - name : CONFIGDB_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_PORT
+        envFrom:
+        - configMapRef:
+            name: contrail-cm
       - name: svcmonitor
         imagePullPolicy: Always
-        image: docker.io/opencontrailnightly/contrail-controller-config-svcmonitor:latest
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        env:
-        - name : RABBITMQ_NODE_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODE_PORT
-        - name : CONFIG_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIG_NODES
-        - name : CONFIGDB_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_NODES
-        - name : ZOOKEEPER_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: ZOOKEEPER_NODES
-        - name : RABBITMQ_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODES
-        - name : CONFIGDB_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_PORT
-      - name: schema
-        imagePullPolicy: Always
-        image: docker.io/opencontrailnightly/contrail-controller-config-schema:latest
-        resources:
-          requests:
-            memory: "2Gi"
-            cpu: "500m"
-        env:
-        - name : RABBITMQ_NODE_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODE_PORT
-        - name : CONFIG_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIG_NODES
-        - name : CONFIGDB_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_NODES
-        - name : ZOOKEEPER_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: ZOOKEEPER_NODES
-        - name : RABBITMQ_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODES
-        - name : CONFIGDB_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_PORT
-      - name: devicemgr
-        imagePullPolicy: Always
-        image: docker.io/opencontrailnightly/contrail-controller-config-devicemgr:latest
+        image: docker.io/michaelhenkel/contrail-controller-config-svcmonitor:queens-master-118-centos
         resources:
           requests:
             memory: "1Gi"
             cpu: "500m"
-        env:
-        - name : RABBITMQ_NODE_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODE_PORT
-        - name : CONFIG_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIG_NODES
-        - name : CONFIGDB_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_NODES
-        - name : ZOOKEEPER_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: ZOOKEEPER_NODES
-        - name : RABBITMQ_NODES
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: RABBITMQ_NODES
-        - name : CONFIGDB_PORT
-          valueFrom:
-            configMapKeyRef:
-                name: contrailconfig-cm
-                key: CONFIGDB_PORT
-
+        envFrom:
+        - configMapRef:
+            name: contrail-cm
+      - name: schema
+        imagePullPolicy: Always
+        image: docker.io/michaelhenkel/contrail-controller-config-schema:queens-master-118-centos
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: "500m"
+        envFrom:
+        - configMapRef:
+            name: contrail-cm
+      - name: devicemgr
+        imagePullPolicy: Always
+        image: docker.io/michaelhenkel/contrail-controller-config-devicemgr:queens-master-118-centos
+        resources:
+          requests:
+            memory: "1Gi"
+            cpu: "500m"
+        envFrom:
+        - configMapRef:
+            name: contrail-cm
