--- a/contrail-cm.yaml
+++ b/contrail-cm.yaml
@@ -4,19 +4,25 @@ kind: ConfigMap
 metadata:
   name: contrail-cm
 data:
-  ANALYTICS_NODES: "contrailanalytics-0.contrailanalytics-svc.default.svc.cluster.local,contrailanalytics-1.contrailanalytics-svc.default.svc.cluster.local,contrailanalytics-2.contrailanalytics-svc.default.svc.cluster.local"
+        #ANALYTICS_SERVERS: "contrailanalytics-svc:8081"
+        #COLLECTOR_SERVERS: "contrailanalytics-svc:8086"
+  ANALYTICS_NODES: "contrailanalytics-0.contrailanalytics-svc,contrailanalytics-1.contrailanalytics-svc,contrailanalytics-2.contrailanalytics-svc"
+  #CONFIG_SERVERS: "contrailconfig-svc:8082"
+  CONFIG_NODES: "contrailconfig-0.contrailconfig-svc,contrailconfig-1.contrailconfig-svc,contrailconfig-2.contrailconfig-svc"
   ANALYTICSDB_CQL_PORT: "9042"
-  ANALYTICSDB_NODES: "cassandra-0.cassandra.default.svc.cluster.local,cassandra-1.cassandra.default.svc.cluster.local,cassandra-2.cassandra.default.svc.cluster.local"
+  ANALYTICSDB_NODES: "cassandra-0.cassandra,cassandra-1.cassandra,cassandra-2.cassandra"
   ANALYTICSDB_PORT: "9160"
   CASSANDRA_JMX_LOCAL_PORT: "7200"
   CLOUD_ORCHESTRATOR: "kubernetes"
-  CONFIG_NODES: "contrailconfig-0.contrailconfig-svc.default.svc.cluster.local,contrailconfig-1.contrailconfig-svc.default.svc.cluster.local,contrailconfig-2.contrailconfig-svc.default.svc.cluster.local"
-  CONFIGDB_NODES: "cassandra-0.cassandra.default.svc.cluster.local,cassandra-1.cassandra.default.svc.cluster.local,cassandra-2.cassandra.default.svc.cluster.local"
+  CONFIGDB_NODES: "cassandra-0.cassandra,cassandra-1.cassandra,cassandra-2.cassandra"
   CONFIGDB_PORT: "9160"
-  CONTROL_NODES: "contrailcontrol-0.contrailcontrol-svc.default.svc.cluster.local,contrailcontrol-1.contrailcontrol-svc.default.svc.cluster.local,contrailcontrol-2.contrailcontrol-svc.default.svc.cluster.local"
-  IPFABRIC_SERVICE_HOST: "contrailconfig-0.contrailconfig-svc.default.svc.cluster.local"
+  CONFIGDB_CQL_PORT: "9042"
+  IPFABRIC_SERVICE_HOST: "contrailconfig-0.contrailconfig-svc"
   RABBITMQ_NODE_PORT: "5672"
-  RABBITMQ_NODES: "rabbitmq-0.rabbitmq.default.svc.cluster.local,rabbitmq-1.rabbitmq.default.svc.cluster.local,rabbitmq-2.rabbitmq.default.svc.cluster.local"
-  ZOOKEEPER_ANALYTICS_NODES: "zk-0.zk-svc.default.svc.cluster.local,zk-1.zk-svc.default.svc.cluster.local,zk-2.zk-svc.default.svc.cluster.local"
+  RABBITMQ_NODES: "rabbitmq-0.rabbitmq,rabbitmq-1.rabbitmq,rabbitmq-2.rabbitmq"
+  ZOOKEEPER_ANALYTICS_NODES: "zk-0.zk-svc,zk-1.zk-svc,zk-2.zk-svc"
   ZOOKEEPER_ANALYTICS_PORT: "2181"
-  ZOOKEEPER_NODES: "zk-0.zk-svc.default.svc.cluster.local,zk-1.zk-svc.default.svc.cluster.local,zk-2.zk-svc.default.svc.cluster.local"
+  ZOOKEEPER_NODES: "zk-0.zk-svc,zk-1.zk-svc,zk-2.zk-svc"
+  KAFKA_NODES: "kafka-0.kafka-svc,kafka-1.kafka-svc,kafka-2.kafka-svc"
+  CONTRAIL_CONTAINER_REGISTRY: docker.io/michaelhenkel
+  CONTRAIL_CONTAINER_TAG: queens-5.0.2-dev
