--- a/contrailwebui.yaml
+++ b/contrailwebui.yaml
@@ -31,7 +31,7 @@ metadata:
   name: contrailwebui
 spec:
   serviceName: contrailwebui-svc
-  replicas: 3
+  replicas: 1
   template:
     metadata:
       labels:
@@ -60,7 +60,7 @@ spec:
             cpu: "250m"
       - name: web
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-controller-webui-web:queens-master-118-centos
+        image: docker.io/michaelhenkel/contrail-controller-webui-web:queens-5.0.2-dev
         resources:
           requests:
             memory: "2Gi"
@@ -73,7 +73,7 @@ spec:
             name: contrail-cm
       - name: job
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-controller-webui-job:queens-master-118-centos
+        image: docker.io/michaelhenkel/contrail-controller-webui-job:queens-5.0.2-dev
         resources:
           requests:
             memory: "2Gi"
