--- a/centos.yaml
+++ b/centos.yaml
@@ -1,6 +1,7 @@
 apiVersion: v1
 kind: Pod
 metadata:
+  namespace: contrail
   name: centos
 spec:
   volumes:
@@ -10,5 +11,3 @@ spec:
   - name: centos
     image: centos
     command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
-    securityContext:
-      privileged: true
