--- a/contrailanalytics.yaml
+++ b/contrailanalytics.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: contrail
   name: contrailanalytics-svc
   labels:
     app: contrailanalytics-svc
@@ -42,6 +43,7 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
+  namespace: contrail
   name: contrailanalytics-pdb
 spec:
   selector:
@@ -52,6 +54,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
+  namespace: contrail
   name: contrailanalytics
 spec:
   serviceName: contrailanalytics-svc
