--- a/contrailcontrol.yaml
+++ b/contrailcontrol.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: contrail
   name: contrailcontrol-svc
   labels:
     app: contrailcontrol-svc
@@ -22,6 +23,7 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
+  namespace: contrail
   name: contrailcontrol-pdb
 spec:
   selector:
@@ -32,6 +34,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
+  namespace: contrail
   name: contrailcontrol
 spec:
   serviceName: contrailcontrol-svc
