--- a/contrailwebui.yaml
+++ b/contrailwebui.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: contrail
   name: contrailwebui-svc
   labels:
     app: contrailwebui-svc
@@ -18,6 +19,7 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
+  namespace: contrail
   name: contrailwebui-pdb
 spec:
   selector:
@@ -28,6 +30,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
+  namespace: contrail
   name: contrailwebui
 spec:
   serviceName: contrailwebui-svc
