--- a/rabbitmq_rbac.yaml
+++ b/rabbitmq_rbac.yaml
@@ -2,11 +2,13 @@
 apiVersion: v1
 kind: ServiceAccount
 metadata:
+  namespace: contrail
   name: rabbitmq 
 ---
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  namespace: contrail
   name: endpoint-reader
 rules:
 - apiGroups: [""]
@@ -16,10 +18,12 @@ rules:
 kind: RoleBinding
 apiVersion: rbac.authorization.k8s.io/v1beta1
 metadata:
+  namespace: contrail
   name: endpoint-reader
 subjects:
 - kind: ServiceAccount
   name: rabbitmq
+  namespace: contrail
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: Role
