--- a/zookeeper.yaml
+++ b/zookeeper.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: contrail
   name: zk-svc
   labels:
     app: zk-svc
@@ -18,6 +19,7 @@ spec:
 apiVersion: v1
 kind: ConfigMap
 metadata:
+  namespace: contrail
   name: zk-cm
 data:
   jvm.heap: "1G"
@@ -31,6 +33,7 @@ data:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
+  namespace: contrail
   name: zk-pdb
 spec:
   selector:
@@ -41,6 +44,7 @@ spec:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
+  namespace: contrail
   name: zk
 spec:
   serviceName: zk-svc
