--- a/contrail-cm.yaml
+++ b/contrail-cm.yaml
@@ -5,27 +5,24 @@ metadata:
   namespace: contrail
   name: contrail-cm
 data:
-        #ANALYTICS_SERVERS: "contrailanalytics-svc:8081"
-        #COLLECTOR_SERVERS: "contrailanalytics-svc:8086"
-  CASSANDRA_SEEDS: "cassandra-0.cassandra"
-  ANALYTICS_NODES: "contrailanalytics-0.contrailanalytics-svc,contrailanalytics-1.contrailanalytics-svc,contrailanalytics-2.contrailanalytics-svc"
-  #CONFIG_SERVERS: "contrailconfig-svc:8082"
-  CONFIG_NODES: "contrailconfig-0.contrailconfig-svc,contrailconfig-1.contrailconfig-svc,contrailconfig-2.contrailconfig-svc"
-  CONTROL_NODES: "contrailcontrol-0.contrailcontrol-svc,contrailcontrol-1.contrailcontrol-svc,contrailcontrol-2.contrailcontrol-svc"
+  CASSANDRA_SEEDS: "cassandra-0.cassandra.contrail.svc.cluster.local"
+  #ANALYTICS_NODES: "contrailanalytics-0.contrailanalytics-svc.contrail.svc.cluster.local,contrailanalytics-1.contrailanalytics-svc.contrail.svc.cluster.local,contrailanalytics-2.contrailanalytics-svc.contrail.svc.cluster.local"
+  CONFIG_NODES: "contrailconfig-0.contrailconfig-svc.contrail.svc.cluster.local,contrailconfig-1.contrailconfig-svc.contrail.svc.cluster.local,contrailconfig-2.contrailconfig-svc.contrail.svc.cluster.local"
+  CONTROL_NODES: "contrailcontrol-0.contrailcontrol-svc.contrail.svc.cluster.local,contrailcontrol-1.contrailcontrol-svc.contrail.svc.cluster.local,contrailcontrol-2.contrailcontrol-svc.contrail.svc.cluster.local"
   ANALYTICSDB_CQL_PORT: "9042"
-  ANALYTICSDB_NODES: "cassandra-0.cassandra,cassandra-1.cassandra,cassandra-2.cassandra"
+  ANALYTICSDB_NODES: "cassandra-0.cassandra.contrail.svc.cluster.local,cassandra-1.cassandra.contrail.svc.cluster.local,cassandra-2.cassandra.contrail.svc.cluster.local"
   ANALYTICSDB_PORT: "9160"
   CASSANDRA_JMX_LOCAL_PORT: "7200"
   CLOUD_ORCHESTRATOR: "kubernetes"
-  CONFIGDB_NODES: "cassandra-0.cassandra,cassandra-1.cassandra,cassandra-2.cassandra"
+  CONFIGDB_NODES: "cassandra-0.cassandra.contrail.svc.cluster.local,cassandra-1.cassandra.contrail.svc.cluster.local,cassandra-2.cassandra.contrail.svc.cluster.local"
   CONFIGDB_PORT: "9160"
   CONFIGDB_CQL_PORT: "9042"
-  IPFABRIC_SERVICE_HOST: "contrailconfig-0.contrailconfig-svc"
+  IPFABRIC_SERVICE_HOST: "contrailconfig-0.contrailconfig-svc.contrail.svc.cluster.local"
   RABBITMQ_NODE_PORT: "5672"
-  RABBITMQ_NODES: "rabbitmq-0.rabbitmq,rabbitmq-1.rabbitmq,rabbitmq-2.rabbitmq"
+  RABBITMQ_NODES: "rabbitmq-0.rabbitmq.contrail.svc.cluster.local,rabbitmq-1.rabbitmq.contrail.svc.cluster.local,rabbitmq-2.rabbitmq.contrail.svc.cluster.local"
   ZOOKEEPER_ANALYTICS_NODES: "zk-0.zk-svc,zk-1.zk-svc,zk-2.zk-svc"
   ZOOKEEPER_ANALYTICS_PORT: "2181"
-  ZOOKEEPER_NODES: "zk-0.zk-svc,zk-1.zk-svc,zk-2.zk-svc"
-  KAFKA_NODES: "kafka-0.kafka-svc,kafka-1.kafka-svc,kafka-2.kafka-svc"
+  ZOOKEEPER_NODES: "zk-0.zk-svc.contrail.svc.cluster.local,zk-1.zk-svc.contrail.svc.cluster.local,zk-2.zk-svc.contrail.svc.cluster.local"
+  KAFKA_NODES: "kafka-0.kafka-svc.contrail.svc.cluster.local,kafka-1.kafka-svc.contrail.svc.cluster.local,kafka-2.kafka-svc.contrail.svc.cluster.local"
   CONTRAIL_CONTAINER_REGISTRY: docker.io/michaelhenkel
-  CONTRAIL_CONTAINER_TAG: queens-5.0.2-dev
+  CONTRAIL_CONTAINER_TAG: 5.1-dev1
