--- a/helm/Contrail/charts/analytics/templates/analytics.yaml
+++ b/helm/Contrail/charts/analytics/templates/analytics.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: contrail
+  namespace: {{ .Values.global.namespace }}
   name: introspection
   labels:
     app: introspection
@@ -22,7 +22,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  namespace: contrail
+  namespace: {{ .Values.global.namespace }}
   name: contrailanalytics-svc
   labels:
     app: contrailanalytics-svc
@@ -63,7 +63,7 @@ spec:
 apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
-  namespace: contrail
+  namespace: {{ .Values.global.namespace }}
   name: contrailanalytics-pdb
 spec:
   selector:
@@ -74,11 +74,11 @@ spec:
 apiVersion: apps/v1beta1
 kind: StatefulSet
 metadata:
-  namespace: contrail
+  namespace: {{ .Values.global.namespace }}
   name: contrailanalytics
 spec:
   serviceName: contrailanalytics-svc
-  replicas: 3
+  replicas: {{ .Values.global.nodeCount }}
   template:
     metadata:
       labels:
@@ -104,7 +104,7 @@ spec:
         - containerPort: 6379
           name: client
       - name: nodemgr
-        image: docker.io/michaelhenkel/contrail-nodemgr:5.1-dev1
+        image: {{ .Values.global.containerRegistry }}/contrail-nodemgr:{{ .Values.global.containerTag }}
         imagePullPolicy: ""
         ports:
         - containerPort: 8104
@@ -123,7 +123,7 @@ spec:
       - name: api
         #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-analytics-api:5.1-dev1
+        image: {{ .Values.global.containerRegistry }}/contrail-analytics-api:{{ .Values.global.containerTag }}
         resources:
           requests:
             memory: "2Gi"
@@ -140,7 +140,7 @@ spec:
             name: contrail-cm
       - name: collector
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-analytics-collector:5.1-dev1
+        image: {{ .Values.global.containerRegistry }}/contrail-analytics-collector:{{ .Values.global.containerTag }}
         #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
         ports:
         - containerPort: 8089
@@ -152,7 +152,7 @@ spec:
             name: contrail-cm
       - name: query-engine
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-analytics-query-engine:5.1-dev1
+        image: {{ .Values.global.containerRegistry }}/contrail-analytics-query-engine:{{ .Values.global.containerTag }}
         #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
         command: ["/bin/sh","-c","sleep 20 && /entrypoint.sh /usr/bin/contrail-query-engine --conf_file=/etc/contrail/contrail-query-engine.conf"]
         ports:
@@ -169,7 +169,7 @@ spec:
         #command: ["/bin/sh","-c", "while true; do echo hello; sleep 10;done"]
         command: ["/bin/sh","-c","sleep 80 && /entrypoint.sh /usr/bin/contrail-alarm-gen --conf_file=/etc/contrail/contrail-alarm-gen.conf"]
         imagePullPolicy: Always
-        image: docker.io/michaelhenkel/contrail-analytics-alarm-gen:5.1-dev1
+        image: {{ .Values.global.containerRegistry }}/contrail-analytics-alarm-gen:{{ .Values.global.containerTag }}
         resources:
           requests:
             memory: "2Gi"
