--- a/helm/Contrail/charts/cassandra/templates/cassandra.yaml
+++ b/helm/Contrail/charts/cassandra/templates/cassandra.yaml
@@ -2,6 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
+  namespace: {{ .Values.global.namespace }}
   labels:
     app: cassandra
   name: cassandra
@@ -14,58 +15,62 @@ spec:
       name: rpc-svc
   selector:
     app: cassandra
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: cassandra-data-1
-  labels:
-    type: local
-    app: cassandra
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /tmp/data/cassandra-data-1
-  persistentVolumeReclaimPolicy: Recycle
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: cassandra-data-2
-  labels:
-    type: local
-    app: cassandra
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /tmp/data/cassandra-data-2
-  persistentVolumeReclaimPolicy: Recycle
----
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: cassandra-data-3
-  labels:
-    type: local
-    app: cassandra
-spec:
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteOnce
-  hostPath:
-    path: /tmp/data/cassandra-data-3
-  persistentVolumeReclaimPolicy: Recycle
+#---
+#apiVersion: v1
+#kind: PersistentVolume
+#metadata:
+#  namespace: {{ .Values.global.namespace }}
+#  name: cassandra-data-1
+#  labels:
+#    type: local
+#    app: cassandra
+#spec:
+#  capacity:
+#    storage: 20Gi
+#  accessModes:
+##    - ReadWriteOnce
+#  hostPath:
+#    path: /tmp/data/cassandra-data-1
+#  persistentVolumeReclaimPolicy: Delete
+#---
+#apiVersion: v1
+#kind: PersistentVolume
+#metadata:
+#  namespace: {{ .Values.global.namespace }}
+#  name: cassandra-data-2
+#  labels:
+#    type: local
+#    app: cassandra
+#spec:
+#  capacity:
+#    storage: 20Gi
+#  accessModes:
+#    - ReadWriteOnce
+#  hostPath:
+#    path: /tmp/data/cassandra-data-2
+#  persistentVolumeReclaimPolicy: Delete
+#---
+#apiVersion: v1
+#kind: PersistentVolume
+#metadata:
+#  namespace: {{ .Values.global.namespace }}
+#  name: cassandra-data-3
+#  labels:
+#    type: local
+#    app: cassandra
+#spec:
+#  capacity:
+#    storage: 20Gi
+#  accessModes:
+#    - ReadWriteOnce
+#  hostPath:
+#    path: /tmp/data/cassandra-data-3
+#  persistentVolumeReclaimPolicy: Delete
 ---
 apiVersion: "apps/v1beta1"
 kind: StatefulSet
 metadata:
+  namespace: {{ .Values.global.namespace }}
   name: cassandra
 spec:
   serviceName: cassandra
@@ -78,26 +83,6 @@ spec:
         "net.juniper.contrail.container.name": "contrail-external-cassandra"
     spec:
       containers:
-        - name: nodemgr
-          imagePullPolicy: Always
-          image: docker.io/michaelhenkel/contrail-nodemgr:5.1-dev1
-          resources:
-            requests:
-              memory: "1Gi"
-              cpu: "500m"
-          envFrom:
-          - configMapRef:
-              name: contrail-cm
-          env:
-          - name: NODE_TYPE
-            value: "database"
-          - name: DATABASE_NODEMGR__DEFAULTS__minimum_diskGB
-            value: "10"
-          - name: DOCKER_HOST
-            value: "unix://mnt/docker.sock"
-          volumeMounts:
-          - mountPath: /mnt
-            name: docker-unix-socket
         - name: cassandra
           image: cassandra:3
           imagePullPolicy: IfNotPresent
@@ -112,11 +97,12 @@ spec:
               name: cql
             - containerPort: 9160
               name: rpc
+          envFrom:
+            - configMapRef:
+                name: contrail-cm
           env:
-            - name: CASSANDRA_SEEDS
-              value: cassandra-0.cassandra.default.svc.cluster.local
             - name: MAX_HEAP_SIZE
-              value: 256M
+              value: 2048M
             - name: HEAP_NEWSIZE
               value: 100M
             - name: CASSANDRA_CLUSTER_NAME
@@ -141,11 +127,11 @@ spec:
         name: cassandra-data
         annotations:  # comment line if you want to use a StorageClass
           # or specify which StorageClass
-          volume.beta.kubernetes.io/storage-class: ""   # comment line if you
+          #volume.beta.kubernetes.io/storage-class: ""   # comment line if you
           # want to use a StorageClass or specify which StorageClass
       spec:
         accessModes: ["ReadWriteOnce"]
         resources:
           requests:
-            storage: 1Gi
+            storage: 20Gi
 
